--- a/basicpage.html
+++ b/basicpage.html
@@ -18,6 +18,18 @@
   </head>
   <body>
     <h1> <center>MUSICIAN TREE </center></h1>
+    
+
+  <div id="content"> <div align = "center"> Content will go here </div>
+
+ <!-- buttons that will be on app -->
+
+	<div class="btn-group">  <div align = "center">
+    <button type="button" class="btn btn-default">Profile</button>
+    <button type="button" class="btn btn-default">Search</button>
+    <button type="button" class="btn btn-default">Message</button>
+    <button type="button" class="btn btn-default">About</button>
+	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
