--- a/basicpage.html
+++ b/basicpage.html
@@ -7,7 +7,8 @@
     <title>Musician Tree </title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/styles.css" rel = "stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,19 +18,27 @@
     <![endif]-->
   </head>
   <body>
-    <h1> <center>MUSICIAN TREE </center></h1>
-    
 
-  <div id="content"> <div align = "center"> Content will go here </div>
+	<h1><center> <img src = "protologo.png" class ="img thumbnail">
+	</img>MUSICIAN TREE </center></h1>
 
- <!-- buttons that will be on app -->
+	<div class = "container">
 
-	<div class="btn-group">  <div align = "center">
+	<div class = "jumbotron">
+		<h1> Hello, Musicians! </h1>
+		<p> Jam with somebody today! </p>
+	</div>
+
+
+	<div class= "btn-group">
     <button type="button" class="btn btn-default">Profile</button>
     <button type="button" class="btn btn-default">Search</button>
     <button type="button" class="btn btn-default">Message</button>
     <button type="button" class="btn btn-default">About</button>
 	</div>
+
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -37,3 +46,4 @@
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
+
