--- a/an_vo_files/aboutus.html
+++ b/an_vo_files/aboutus.html
@@ -19,8 +19,10 @@ with other musicians.  Search based on preference in music, instrument
 
 <p> <center> Find out more at <a href="http://www.musiciantree.org">our website</a> </center></p>
 
-
-
+<!-- Glyphish asks people to provide a link to show thanks for using their icons in our programs. 
+While I'm sure it's not completely necessary to do so, I went ahead and added a link to them here just in case.  
+At the very least, it would be there for me to see that my code for linking to website works although I have
+no problem removing this line in the future to make our app more presentable.  Heh. -->
 <p> <center> <a href="http://www.glyphish.com">Icons from Glyphish</a> </center></p>
 
 
@@ -28,5 +30,8 @@ with other musicians.  Search based on preference in music, instrument
 
 </body>
 
+<!-- To be honest, I'm not really sure if we need a aboutus page.  Unless we have alot to say about ourselves, 
+I think I can just put this small bit of info on the home page.  As of now it's just here just to be here
+but I might consider removing this page for something else in the future. -->
 
 </html>
