--- a/an_vo_files/homepage.html
+++ b/an_vo_files/homepage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,26 +16,39 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+      
 
+<body>
+	<!-- The main home page of musiciantree.  Layout is going to be a mess as all I really did
+	is center everything. Once I figure out how to properly put things in place, I'll do so accordingly. -->
+	
+	<!-- I would like to use the logo as a back button as I've seen it done in a few apps. That's more back-end
+	stuff to figure out later but I have no problem using glyphicons. 
+	
+	-->
+	
+	<!-- This is our prototype logo.  It's ugly and was done by me in paint in like 3 seconds.  Thankfully, Linda
+	is working on a way better logo with photoshop and I'll replace it when she's done. -->
 	<h1><center> <img src = "protologo.png" class ="img thumbnail">
 	</img>MUSICIAN TREE </center></h1>
 
 	<div class = "container">
 
 	<div class = "jumbotron">
-		<h1> Hello, Musicians! </h1>
-		<p> Jam with somebody today! </p>
+	
+	<h1> Hello, Musicians! </h1>
+	<p> Jam with somebody today! </p>
+	<!-- I'll think of something better to put here but for now... -->
 	</div>
 
-
-	<div class= "btn-group">
+    <!--buttons that will go to other pages of code -->	
+    <div class= "btn-group">
     <button type="button" class="btn btn-default">Profile</button>
     <button type="button" class="btn btn-default">Search</button>
     <button type="button" class="btn btn-default">Message</button>
     <button type="button" class="btn btn-default">About</button>
-	</div>
+    </div>
 
 
 
