--- a/an_vo_files/createaccount.html
+++ b/an_vo_files/createaccount.html
@@ -13,7 +13,9 @@
 
 <h1> <center> Create Account </center> </h1>
 
-<h4> <center> Fill out the form </center> </h4>
+<h4> <center> Fill out the Form </center> </h4>
+
+<!-- How do you align those boxes correctly? Something I need to figure out -->
 
 <form class = "createaccount"> <div align = "center">
 <label> First Name: </label>
