--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -13,6 +13,7 @@
 <body>
 <h1> <center> Log In </center> </h1>
 
+	<!-- Generic log in screen.  Slight align adjustments need  to be made with the labels. -->
 	<form class = "well"> <div align = "center">
 		<label> Username </label>
 		<input type = "text" class = "span3">
