--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1> <center> Log In </center> </h1>
+<h1> <center> Log-In </center> </h1>
 
 	<!-- Generic log in screen.  Slight align adjustments need  to be made with the labels. -->
 	<form class = "well"> <div align = "center">
