--- a/an_vo_files/aboutus.html
+++ b/an_vo_files/aboutus.html
@@ -17,7 +17,7 @@
 with other musicians.  Search based on preference in music, instrument
 , and location and rock today!  </center> </h6>
 
-<p> <center> Find out more at <a href="http://www.musiciantree.org">our website</a> </center></p>
+<p> <center> Find out more at <a href="http://signup.musiciantree.org">our website</a> </center></p>
 
 <!-- Glyphish asks people to provide a link to show thanks for using their icons in our programs. 
 While I'm sure it's not completely necessary to do so, I went ahead and added a link to them here just in case.  
