--- a/an_vo_files/homepage.html
+++ b/an_vo_files/homepage.html
@@ -7,8 +7,8 @@
     <title>Musician Tree </title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/styles.css" rel = "stylesheet">
+    <!--<link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/styles.css" rel = "stylesheet"> -->
     
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css" rel="stylesheet">
