--- a/an_vo_files/homepage.html
+++ b/an_vo_files/homepage.html
@@ -33,7 +33,7 @@
 	
 	<!-- This is our prototype logo.  It's ugly and was done by me in paint in like 3 seconds.  Thankfully, Linda
 	is working on a way better logo with photoshop and I'll replace it when she's done. -->
-	<h1><center> <img src = "protologo.png" class ="img thumbnail">
+	<h1> <img src = "protologo.png" class ="img thumbnail">
 	</img>MUSICIAN TREE </center></h1>
 
 	<div class = "container">
