--- a/an_vo_files/homepage.html
+++ b/an_vo_files/homepage.html
@@ -10,6 +10,21 @@
     <!--<link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/styles.css" rel = "stylesheet"> -->
     
+    	<style type="text/css">
+		body {
+			font-style:"Helvetica",sans-serif;
+			text-transform:lowercase;
+			margin: 0 20px;
+		}
+		.page-header {
+			margin-top:0;
+			margin-bottom:0;
+		}
+		.pin-tag {display:none;}
+		.btn { vertical-align: middle;}
+		h3 .glyphicon {color:#428bca;}
+		h1 {margin:0;}
+	</style>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css" rel="stylesheet">
 
