--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -8,6 +8,10 @@
 	<!--<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/styles.css" rel = "stylesheet"> -->
 	<!-- Latest compiled and minified CSS -->
+	   <!-- Bootstrap core CSS -->
+    	<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    	<!-- Bootstrap theme -->
+    	<link href="../../dist/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 	<!-- Optional theme -->
