--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<h1> <center> Log-In </center> </h1>
+<h1>  Log-In  </h1>
 
 	<!-- Generic log in screen.  Slight align adjustments need  to be made with the labels. -->
 	<form class = "well"> <div align = "center">
