--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Log In </title>
-	<!--<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/styles.css" rel = "stylesheet"> -->
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/styles.css" rel = "stylesheet"> 
 	<!-- Latest compiled and minified CSS -->
 	   <!-- Bootstrap core CSS -->
     	<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
