--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<h1>  Log-In  </h1>
+<div align = "center">  Log-In   </div>
 
 	<!-- Generic log in screen.  Slight align adjustments need  to be made with the labels. -->
 	<form class = "well"> <div align = "center">
