--- a/an_vo_files/homepage.html
+++ b/an_vo_files/homepage.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 
 <head>
-    <!--
+  
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Musician Tree </title>
-    -->
+    <title> Musician Tree </title>
+   
     <!-- Bootstrap -->
-    <!--<link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/styles.css" rel = "stylesheet"> -->
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     	<style type="text/css">
