--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Log In </title>
-	<link href="c:\Users\An Vo\Downloads\bootstrap\bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet" media = "screen">
 	<link href="css/styles.css" rel = "stylesheet"> 
 	<!-- Latest compiled and minified CSS -->
 	   <!-- Bootstrap core CSS -->
