--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Log In </title>
 	<link href="css/bootstrap.css" rel="stylesheet" media = "screen">
-	<link href="css/styles.css" rel = "stylesheet"> 
+	<link href="css/bootstrap-theme.css" rel = "stylesheet"> 
 	<!-- Latest compiled and minified CSS -->
 	   <!-- Bootstrap core CSS -->
 	   
