--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Log In </title>
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/bootstrap-theme.css" rel = "stylesheet"> 
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	 
 	<!-- Latest compiled and minified CSS -->
 	   <!-- Bootstrap core CSS -->
 	   
