--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
   <html>
   <head>
   <meta charset = "utf-8">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <title> bootstrap </title>
   </head>
   
