--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/styles.css" rel = "stylesheet">
 	<title> Log In </title>
 	 
 	<!-- Latest compiled and minified CSS -->
