--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/styles.css" rel = "stylesheet">
+	<link href="css/bootstrap-theme.css" rel = "stylesheet">
 	<title> Log In </title>
 	 
 	<!-- Latest compiled and minified CSS -->
