--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -12,7 +12,7 @@
 	   
     	<!--<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
     	<!-- Bootstrap theme -->
-    	<!--<link href="../../dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    	<!--<link href="../../dist/css/bootstrap-theme.min.css" rel="stylesheet"> -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	-->
 	<!-- Optional theme -->
