--- a/an_vo_files/login.html
+++ b/an_vo_files/login.html
@@ -1,47 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/bootstrap-theme.css" rel = "stylesheet">
-	<title> Log In </title>
-	 
-	<!-- Latest compiled and minified CSS -->
-	   <!-- Bootstrap core CSS -->
-	   
-    	<!--<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-    	<!-- Bootstrap theme -->
-    	<!--<link href="../../dist/css/bootstrap-theme.min.css" rel="stylesheet"> -->
-
-
-	<!-- Optional theme -->
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title> Log In </title>
+<link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap-theme.css" rel = "stylesheet">
 
 </head>
 
 <body>
-<div align = "center">  Log-In   </div>
+<h1> <center> Log In </center> </h1>
 
-	<!-- Generic log in screen.  Slight align adjustments need  to be made with the labels. -->
-	<form class = "well"> <div align = "center">
-		<label> Username </label>
-		<input type = "text" class = "span3">
-		<p>
-		<label> Password </label>
-		<input type = "text" class ="span3">
-		<p>
-		<label> Remember Me </label>
-		<input type = "checkbox" class = "span3">
-		<p>
-		<button type="button" class="btn btn-primary">Submit</button>
-		<p>
-		<button type="button" class="btn btn-default">Create Account</button>
-		</div>
-	</form>
+<form class = "well"> <div align = "center">
+<label> Username </label>
+<input type = "text" class = "span3">
+<p>
+<label>Password </label>
+<input type = "text" class ="span3">
+<p>
+<label> Remember Me </label>
+<input type = "checkbox" class = "span3">
+<p>
+<button type="button" class="btn btn-primary">Submit</button>
+<p>
+<button type="button" class="btn btn-default">Create Account</button>
+</div>
+</form>
 
 
 </body>
