--- a/login.html
+++ b/login.html
@@ -7,6 +7,14 @@
 <title> Log In </title>
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/bootstrap-theme.css" rel = "stylesheet">
+<style type = "text/css">
+ p
+ {
+   font-size: 16 pts; 
+   font-family: Arial;
+ }
+  
+</style>
 
 </head>
 
