--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<h1> <center> Log In </center> </h1>
+<p> Log In  </p>
 
 <form class = "well"> <div align = "center">
 <label> Username </label>
