--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
  {
    font-size: 16 pts; 
    font-family: arial;
+   text-align: center;
    color:#CC0000;
  }
   
@@ -20,20 +21,18 @@
 </head>
 
 <body>
-<p> Log In  </p>
+<p> Musician Tree  </p>
 
 <form class = "well"> <div align = "center">
 <label> Username </label>
 <input type = "text" class = "span3">
-<p>
-<label>Password </label>
+<p> <label>Password </label> </p>
 <input type = "text" class ="span3">
-<p>
-<label> Remember Me </label>
+<p> <label> Remember Me </label></p>
 <input type = "checkbox" class = "span3">
-<p>
+<br>
 <button type="button" class="btn btn-primary">Submit</button>
-<p>
+<br>
 <button type="button" class="btn btn-default">Create Account</button>
 </div>
 </form>
