--- a/login.html
+++ b/login.html
@@ -26,9 +26,9 @@
 <form class = "well"> <div align = "center">
 <label> Username </label>
 <input type = "text" class = "span3">
-<p> <label>Password </label> </p>
+<label>Password </label>
 <input type = "text" class ="span3">
-<p> <label> Remember Me </label></p>
+<label> Remember Me </label>
 <input type = "checkbox" class = "span3">
 <br>
 <button type="button" class="btn btn-primary">Submit</button>
