--- a/login.html
+++ b/login.html
@@ -15,13 +15,21 @@
    text-align: center;
    color:#CC0000;
  }
+ #title
+ {
+   font-size: 32 pts;
+   text-align:center;
+   
+ }
   
 </style>
 
 </head>
 
 <body>
-<p> Musician Tree  </p>
+<div id = "title">
+Musician Tree  
+</div>
 
 <form class = "well"> <div align = "center">
 <label> Username </label>
