--- a/login.html
+++ b/login.html
@@ -13,13 +13,19 @@
    font-size: 16 pts; 
    font-family: arial;
    text-align: center;
-   color:#CC0000;
+   
  }
  #title
  {
    font-size: 120 pts;
    text-align:center;
    
+ }
+ 
+ #account
+ {
+  color: blue;
+  
  }
   
 </style>
@@ -31,7 +37,7 @@
 Musician Tree  
 </div>
 
-<form class = "well"> <div align = "center">
+<form class = "inputs"> <div align = "center">
 <label> Username </label>
 <input type = "text" class = "span3">
 <p>
@@ -46,6 +52,12 @@ Musician Tree
 <button type="button" class="btn btn-default">Create Account</button>
 </div>
 </form>
+
+<div id = "account"> 
+<u>Create Account</u> 
+<br>
+<u>Forgot Username/Password</u>
+</div>
 
 
 </body>
