--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
    
  }
  
- #account
+ h6
  {
   color: blue;
   
@@ -50,14 +50,13 @@ Musician Tree
 <button type="button" class="btn btn-primary">Submit</button>
 <br>
 <button type="button" class="btn btn-default">Create Account</button>
+<label> <h6> <u> Create Account </u> </h6> </label>
+<label> <h6> <u> Forgot Username/Password </u> </h6></label>
 </div>
 </form>
 
-<div id = "account"> 
-<u>Create Account</u> 
-<br>
-<u>Forgot Username/Password</u>
-</div>
+ 
+
 
 
 </body>
