--- a/login.html
+++ b/login.html
@@ -8,15 +8,17 @@
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/bootstrap-theme.css" rel = "stylesheet">
 <style type = "text/css">
- p
+ p.pos_fixed
  {
+   position: fixed;
    font-size: 16 pts; 
    font-family: arial;
    text-align: center;
    
  }
- #title
+ #title.pos_fixed
  {
+   position: fixed;
    font-size: 120 pts;
    text-align:center;
    
