--- a/create1.html
+++ b/create1.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     <title> Name </title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
     <link href = "css/boostrap.min.css" rel = "stylesheet">
     <link href = "css/styles.css" rel = "stylesheet">
