--- a/create1.html
+++ b/create1.html
@@ -13,7 +13,7 @@
   
     <div class = "navbar navbar-inverse">  
     <button type = "button" class = "btn btn-default btn-lg"> 
-        <span class = "glyphicon glyphicon arrow-left" </span>
+        <span class = "glyphicon glyphicon-arrow-left" </span>
         
     </button>    
         
