--- a/create1.html
+++ b/create1.html
@@ -23,7 +23,7 @@
     <button type = "button" class = "btn btn-default btn-lg"> 
         <span class = "glyphicon glyphicon-arrow-left" </span>
     </button>
-    <p class = "navbar-text navbar-center"> <h6> What is your name </h6></p>
+    <p class = "navbar-text"> <h6> What is your name </h6></p>
     
    
         
