--- a/create2.html
+++ b/create2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title> Name </title>
+    <title> Create a Account Step 2 </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
@@ -14,7 +14,7 @@
       text-align:center;   
     }
     
-    }
+    
     #input3
     {
         position:absolute; top:300px; left:600px;
