--- a/create3.html
+++ b/create3.html
@@ -15,7 +15,7 @@
     <body>
     <div class = "navbar navbar-inverse">  
       <button type = "button" class = "btn btn-default btn-lg"> 
-        < span class = "glyphicon glyphicon-arrow-left" </span>
+        <span class = "glyphicon glyphicon-arrow-left"> </span>
       </button>
     </div>
     
