--- a/create3.html
+++ b/create3.html
@@ -38,6 +38,12 @@
       <input type="password" class="form-control" id="inputPassword2" placeholder="Password Again">
     </div>
   </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Continue</button>
+    </div>
+  </div>
+  </form>
   
   </body>
   
