--- a/create3.html
+++ b/create3.html
@@ -11,7 +11,7 @@
     
     #form-group
     {
-        position:fixed; top: 100px;
+        position:absolute; top:100px;
     }
     
     </style>
