--- a/create3.html
+++ b/create3.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap-theme.css" rel = "stylesheet">
     <style type = "text/css">
     
-    #form-group
+    .form-group
     {
         position:absolute; top:100px;
     }
