--- a/create4.html
+++ b/create4.html
@@ -20,39 +20,45 @@
       </button>
     </div>
     
-  <div class="checkbox">
-    <label>
-    <input type="checkbox" value="">
-    Guitar
-    </label>
-  </div>
+<form class="form-horizontal" role="form">    
+    <div class="checkbox">
+    <label> <input type="checkbox" value=""> Guitar </label>
+    </div>
   
-  <div class="checkbox">
-    <label>
-    <input type="checkbox" value="">
-    Drums
-    </label>
+    <div class="checkbox">
+    <label> <input type="checkbox" value=""> Drums </label>
   </div>
-  
+  <div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10">
   <div class="checkbox">
     <label>
     <input type="checkbox" value="">
     Bass
     </label>
   </div>
+  </div>
+  </div
   
+  <div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10">
   <div class="checkbox">
     <label>
     <input type="checkbox" value="">
     Piano
     </label>
   </div>
+  </div>
+  </div>
   
+  <div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10">
   <div class="checkbox">
     <label>
     <input type="checkbox" value="">
     Vocals
     </label>
+  </div>
+  </div>
   </div>
   
    <div class="form-group">
@@ -60,6 +66,7 @@
       <button type="submit" class="btn btn-default">Continue</button>
     </div>
   </div>
+  </form>
   
   </body>
   </html>
