--- a/accountCreated.html
+++ b/accountCreated.html
@@ -8,7 +8,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-theme.css" rel = "stylesheet">
     <style type = "text/css">
-    #continue
+    #message
     {
       text-align:center;
     }
