--- a/accountCreated.html
+++ b/accountCreated.html
@@ -15,7 +15,7 @@
     
     #continue
     {
-      text-align:center;
+      position:fixed; top: 300px; left: 600px;
         
     }
     </style>
