--- a/main.html
+++ b/main.html
@@ -22,8 +22,10 @@
     </div>
     
     <ul class="nav nav-pills nav-stacked">
-    <li><a href="#">Profile</a></li>
+    <li><a href="#">Profile
         <span class = "glyphicon glyphicon-user"> </span>
+        </a>
+        </li>
     <li><a href="#">Messages</a></li>
     <li><a href="#">Friends</a></li>
     <li><a href="#">Report a Problem</a></li>
