--- a/main.html
+++ b/main.html
@@ -22,9 +22,8 @@
     </div>
     
     <ul class="nav nav-pills nav-stacked">
-    <li><a href="#"> 
+    <li><a href="#"> Profile
         <span class = "glyphicon glyphicon-user"> </span>
-        Profile
         </a>
         </li>
     <!--
