--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-theme.css" rel = "stylesheet">
     <style type = "text/css">
+    p
+    {
+      text-align:center;   
+    }
     </style>
     </head>
     
