--- a/main.html
+++ b/main.html
@@ -57,7 +57,7 @@
         <p> Search by...</p>
             <form class="form-horizontal" role="form">
             <div class="form-group">
-            <label for="findUser" class="col-sm-2 control-label"> Name </label>
+            <label for="findUser" class="col-sm-offset-2 col-sm-10"> Name </label>
             <div class="col-sm-10">
             <input type="text" class="form-control" id="findUsername" placeholder="Search">
             </div>
