--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
             <form class="form-horizontal" role="form">
             <div class="form-group">
             <label for="findUser" class="col-sm-offset-2 col-sm-10"> Name </label>
-            <div class="col-sm-10">
+            <div class="col-sm-offset-2 col-sm-10">
             <input type="text" class="form-control" id="findUsername" placeholder="Search">
             </div>
      </div>
