--- a/main.html
+++ b/main.html
@@ -12,6 +12,11 @@
     {
       text-align:center;   
     }
+    #search
+    
+    {
+      position:fixed; top: 400px; left: 300px;  
+    }
     </style>
     </head>
     
@@ -111,7 +116,7 @@
      </div>
   
      <div class="form-group">
-     <div class="col-sm-offset-2 col-sm-10">
+     <div class="col-sm-offset-2 col-sm-10" id = "search">
      <button type="submit" class="btn btn-default">Search</button>
      </div>
      </div>
