--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     #search
     
     {
-      position:fixed; top: 600px; left: 400px;  
+      position:absolute; top: 600px; left: 400px;  
     }
     </style>
     </head>
