--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
       </button>
     </div>
     
-    <ul class="nav nav-pills nav-stacked">
+    <ul class="nav nav-pills">
     <li> <a href="#"> Profile 
     <span class = "glyphicon glyphicon-user"> </span>
     </a>
