--- a/main.html
+++ b/main.html
@@ -122,7 +122,7 @@
   
      <div class="form-group">
      <div class="col-sm-offset-2 col-sm-10" id = "search">
-     <button type="submit" class="btn btn-default">Search</button>
+     <button type="submit" class="btn btn-primary">Search</button>
      </div>
      </div>
      </div>
