--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
     
     <div class="media">
     <a class="pull-left" href="#">
-    <img class="media-object" src="..." alt="...">
+    <img class="media-object" src="..." alt="Picture Goes Here">
     </a>
     <div class="media-body">
     <div class="fullName">Full Name</div>
