--- a/profile.html
+++ b/profile.html
@@ -49,6 +49,7 @@
     </div>
     
     <div id = "genre">
+    <p> Genre </p>
     <div class="col-sm-9">
     <div class="input-group">
     <input type="text" class="form-control">
