--- a/profile.html
+++ b/profile.html
@@ -50,7 +50,7 @@
     
     <div id = "genre">
     <p> Genre </p>
-    <div class="col-sm-9">
+    <div class="col-sm-offset-2 col-sm-10">
     <div class="input-group">
     <input type="text" class="form-control">
     <span class="input-group-btn">
