--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,9 @@
     <div class="col-sm-offset-2 col-sm-10">
     <div class="input-group">
       <div class="input-group-btn">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"> + </button>
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"> + <span class="caret"></span>
+            
+        </button>
         <ul class="dropdown-menu">
           <li><a href="#">Guitar</a></li>
           <li><a href="#">Drums</a></li>
