--- a/profile.html
+++ b/profile.html
@@ -103,6 +103,21 @@
       <input type="text" class="form-control">
     </div><!-- /input-group -->
   </div><!-- /.col-lg-6 -->
+  
+  <p> Contact Information </p>
+    <div class="col-sm-offset-2 col-sm-10">
+    <div class="input-group">
+    <input type="text" placeholder = "Phone Number">
+    
+    </div>
+    </div
+    <div class="col-sm-offset-2 col-sm-10">
+    <div class="input-group">
+    <input type="text" placeholder = "Address">
+    </div>
+    </div>
+    
+  
 
 </div>
 </form>
