--- a/profile.html
+++ b/profile.html
@@ -110,7 +110,7 @@
     <input type="text" placeholder = "Phone Number">
     
     </div>
-    </div
+    </div>
     <div class="col-sm-offset-2 col-sm-10">
     <div class="input-group">
     <input type="text" placeholder = "Address">
