--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <style type = "text/css">
     #picture
     {
-      position:fixed;  top: 200px; 
+      position:absolute;  top: 200px; 
     }
     
     #genre
