--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,10 @@
     {
       position:absolute;  top: 250px;
     }
+    p
+    {
+        position:absolute; left: 50px;
+    }
     
     </style>
     </head>
