--- a/message.html
+++ b/message.html
@@ -21,6 +21,7 @@
       </button>
     </div>
     
+    <form>
     <div class="col-lg-6">
     <div class="input-group">
       <span class="input-group-btn">
@@ -28,7 +29,15 @@
       </span>
       <input type="text" class="form-control">
     </div><!-- /input-group -->
-  </div><!-- /.col-lg-6 -->
+    </div><!-- /.col-lg-6 -->
+  
+     <textarea class="form-control" rows="5"></textarea>
+     <div class="form-group">
+     <div class="col-sm-offset-2 col-sm-10" id = "message">
+     <button type="submit" class="btn btn-primary">Send</button>
+     </div>
+     </div>
+     </form>
   
   </body>
   
