--- a/message.html
+++ b/message.html
@@ -22,7 +22,7 @@
     </div>
     
     <form>
-    <div class="col-lg-6">
+    <div class="col-sm-offset-2 col-sm-10">
     <div class="input-group">
       <span class="input-group-btn">
         <button class="btn btn-default" type="button"> To: </button>
