--- a/message.html
+++ b/message.html
@@ -31,11 +31,12 @@
     </div><!-- /input-group -->
     </div><!-- /.col-lg-6 -->
      
-   
+     <div class="col-sm-offset-2 col-sm-10">
      <textarea class="form-control" rows="5"></textarea>
      <div class="form-group">
      <div class="col-sm-offset-2 col-sm-10" id = "message">
      <button type="submit" class="btn btn-primary">Send</button>
+     </div>
      </div>
      </div>
      
