--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title> Log In </title>
+<title> Log-In </title>
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/bootstrap-theme.css" rel = "stylesheet">
 <style type = "text/css">
@@ -39,23 +39,29 @@
 Musician Tree  
 </div>
 
-<form class = "inputs"> <div align = "center">
-<label> Username </label>
-<input type = "text" class = "span3">
-<p>
-<label>Password </label>
-<input type = "text" class ="span3">
-<p>
-<label> Remember Me </label>
-<input type = "checkbox" class = "span3">
-<br>
-<button type="button" class="btn btn-primary">Submit</button>
-<br>
-<button type="button" class="btn btn-default">Create Account</button>
-<label> <h6> <u> Create Account </u> </h6> </label>
-<label> <h6> <u> Forgot Username/Password </u> </h6></label>
-</div>
-</form>
+<form class="form-horizontal" role="form">
+   <div class="form-group">
+    <label for="inputFirstName" class="col-sm-2 control-label">First Name: </label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <label for="inputLastName" class="col-sm-2 control-label"> Last Name: </label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputPassword" placeholder="Password">
+    </div>
+  </div>
+  
+  
+   <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-primary">Log-In</button>
+    </div>
+  </div>
+  
+ </form>
 
  
 
