--- a/login.html
+++ b/login.html
@@ -41,14 +41,14 @@ Musician Tree
 
 <form class="form-horizontal" role="form">
    <div class="form-group">
-    <label for="inputFirstName" class="col-sm-2 control-label">First Name: </label>
+    <label for="inputFirstName" class="col-sm-2 control-label"> </label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="inputEmail" placeholder="Email">
     </div>
   </div>
   
   <div class="form-group">
-    <label for="inputLastName" class="col-sm-2 control-label"> Last Name: </label>
+    <label for="inputLastName" class="col-sm-2 control-label"> </label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="inputPassword" placeholder="Password">
     </div>
@@ -57,7 +57,7 @@ Musician Tree
   
    <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Log-In</button>
+      <button type="submit" class="btn btn-primary">Log In</button>
     </div>
   </div>
   
