--- a/login.html
+++ b/login.html
@@ -39,6 +39,16 @@
 Musician Tree  
 </div>
 
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="logo.jpg" class="thumbnail">
+      <img data-src="holder.js/100%x180" alt="...">
+    </a>
+  </div>
+  ...
+</div>
+
+
 <form class="form-horizontal" role="form">
    <div class="form-group">
     <label for="inputFirstName" class="col-sm-2 control-label"> </label>
