--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@ Musician Tree
 <div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="logo.jpg" class="thumbnail">
-      <img data-src="holder.js/100%x180" alt="...">
+      <img data-src="logo.jpg">
     </a>
   </div>
   ...
