--- a/login.html
+++ b/login.html
@@ -39,14 +39,7 @@
 Musician Tree  
 </div>
 
-<div class="row">
-  <div class="col-xs-6 col-md-3">
-    <a href="logo.jpg" class="thumbnail">
-      <img data-src="logo.jpg">
-    </a>
-  </div>
-  ...
-</div>
+<img class = "featureImg" src = "logo.jpg">
 
 
 <form class="form-horizontal" role="form">
