--- a/login.html
+++ b/login.html
@@ -19,8 +19,8 @@
  #title
  {
    
-   font-size: xx-large;
-   text-align:center;
+   position:fixed; left: 200px;
+   
    
  }
  
@@ -35,11 +35,10 @@
 </head>
 
 <body>
-<div id = "title">
-Musician Tree  
-</div>
 
+<div id = "title"> 
 <img class = "featureImg" src = "logo.jpg">
+</div>
 
 
 <form class="form-horizontal" role="form">
