--- a/login.html
+++ b/login.html
@@ -29,6 +29,10 @@
   color: blue;
   
  }
+ #login
+ {
+  position:absolute; top: 300px;
+ }
   
 </style>
 
@@ -42,6 +46,7 @@
 
 
 <form class="form-horizontal" role="form">
+<div id = "login">
    <div class="form-group">
     <label for="inputFirstName" class="col-sm-2 control-label"> </label>
     <div class="col-sm-10">
@@ -61,6 +66,7 @@
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">Log In</button>
     </div>
+  </div>
   </div>
   
  </form>
