--- a/create2.html
+++ b/create2.html
@@ -61,7 +61,7 @@
    <div class="form-group">
     <label for="inputDate" class="col-sm-2 control-label">Enter date of birth </label>
     <div class="col-sm-10">
-      <input type="date" class="form-control" id="inputDate">
+      <input type="date" class="form-control" id="inputDate" placeholder = "MM/DD/YYYY">
     </div>
   </div>
   <div class="form-group">
