--- a/create1.html
+++ b/create1.html
@@ -71,7 +71,7 @@
   
    <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Continue</button>
+      <button type="submit" class="btn btn-primary">Continue</button>
     </div>
   </div>
 
