--- a/create3.html
+++ b/create3.html
@@ -41,7 +41,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Continue</button>
+      <button type="submit" class="btn btn-primary">Continue</button>
     </div>
   </div>
   </form>
