--- a/create4.html
+++ b/create4.html
@@ -70,7 +70,7 @@
   
    <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Continue</button>
+      <button type="submit" class="btn btn-primary">Continue</button>
     </div>
   </div>
   </form>
