--- a/create1.html
+++ b/create1.html
@@ -56,7 +56,7 @@
         
  <form class="form-horizontal" role="form">
    <div class="form-group">
-    <label for="inputFirstName" class="col-sm-2 control-label">First Name: </label>
+    <label for="inputFirstName" class="col-xs-6 col-sm-3">First Name: </label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
     </div>
