--- a/login.html
+++ b/login.html
@@ -8,15 +8,7 @@
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/bootstrap-theme.css" rel = "stylesheet">
 <style type = "text/css">
- p.pos_fixed
- {
-   position: fixed;
-   font-size: 16 pts; 
-   font-family: arial;
-   text-align: center;
-   
- }
- #title
+#title
  {
    
    position:fixed; left: 200px;
@@ -40,19 +32,21 @@
 
 <body>
 
+<!-- Logo    -->
 <div id = "title"> 
 <img class = "featureImg" src = "logo.jpg">
 </div>
 
 
+<!-- Form for inputting email, password, and log-in  -->
 <form class="form-horizontal" role="form">
 <div id = "login">
-   <div class="form-group">
+    <div class="form-group">
     <label for="inputFirstName" class="col-sm-2 control-label"> </label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="inputEmail" placeholder="Email">
     </div>
-  </div>
+    </div>
   
   <div class="form-group">
     <label for="inputLastName" class="col-sm-2 control-label"> </label>
@@ -67,13 +61,11 @@
       <button type="submit" class="btn btn-primary">Log In</button>
     </div>
   </div>
-  </div>
   
- </form>
-
- 
-
-
+</div>  <!-- Closes <div id = login -->
+</form>
 
 </body>
+
+ 
 </html>
