--- a/login.html
+++ b/login.html
@@ -59,6 +59,18 @@
     </div>
   </div>
   
+   <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-primary">Create Account</button>
+    </div>
+  </div>
+  
+   <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-primary">Forgot Username/Password </button>
+    </div>
+  </div>
+  
 </div>  <!-- Closes <div id = login -->
 </form>
 
