--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
   
    <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Forgot Username/Password </button>
+      <button type="submit" class="btn btn-primary">Forget Account </button>
     </div>
   </div>
   
