--- a/login.html
+++ b/login.html
@@ -59,17 +59,8 @@
     </div>
   </div>
   
-   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Create Account</button>
-    </div>
-  </div>
-  
-   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Forget Account </button>
-    </div>
-  </div>
+   <div> Create Account </div>
+   <div> Forgot Username/Password </div>
   
 </div>  <!-- Closes <div id = login -->
 </form>
