--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     position:fixed; left: 200px;
  }
  
- h6
+ p
  {
   color: blue;
   
@@ -59,8 +59,8 @@
     </div>
   </div>
   
-   <div> Create Account </div>
-   <div> Forgot Username/Password </div>
+   <p> Create Account </p>
+   <p> Forgot Username/Password </p>
   
 </div>  <!-- Closes <div id = login -->
 </form>
