--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
     <div class="form-group">
     <label for="inputFirstName" class="col-sm-2 control-label"> </label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+      <input type="text" class="form-control" id="inputEmail" placeholder="Email@example.com">
     </div>
     </div>
   
@@ -52,6 +52,12 @@
    <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">Log In</button>
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-primary">Create Account</button>
     </div>
   </div>
   
